[package]
name = "chess-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
simbelmyne-chess = "0.1.0"
simbelmyne-uci = "0.1.0"
